small filter fixes on browse page
- displaying active filters in sidenav change background instead of bold
- keyword buttons on browse cards now properly filter via keywords_list rather than hierarchical limits
- fixed bug with keyword list not showing properly in url / filtering (but there's probably a better way to do this that lets us call it something other than Keywords List???)
- fixed bug for media_type filter via card button

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -309,8 +309,7 @@ ul.theme-tabs li a:hover, ul.theme-tabs li a:focus {
     font-size: 1rem;
 }
 .active-filter-link{
-    font-weight: bold;
-    text-decoration: underline;
+    background: hsla(0, 0%, 0%, .2);
 }
 
 .responsive-iframe {
